--- a/utils/subconverter/pref.ini
+++ b/utils/subconverter/pref.ini
@@ -221,6 +221,7 @@ template_path=
 ;Value of 'clash.http_port' can be accessed with 'global.clash.http_port' in the template.
 clash.http_port=7890
 clash.socks_port=7891
+clash.mixed_port=7890
 clash.allow_lan=true
 clash.log_level=info
 
