Update automated Clash config rule file.

--- a/utils/subconverter/config/rule.ini
+++ b/utils/subconverter/config/rule.ini
@@ -2,14 +2,14 @@
 ;根据国家分类的Clash转换规则
 ;不要随意改变关键字，否则会导致出错
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🤘 手动选择`[]⚡ 故障转移`[]🏳️‍🌈 国家选择`[]🌎 北美地区`[]🌏 东亚地区`[]🌍 其它地区`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🤘 手动选择`[]⚡ 故障转移`[]🏳️‍🌈 地区选择`[]🌎 北美地区`[]🌏 东亚地区`[]🌍 其它地区`[]DIRECT
 custom_proxy_group=🤘 手动选择`select`.*
-custom_proxy_group=🏳️‍🌈 国家选择`select`[]美国`[]香港`[]狮城`[]日本`[]台湾`[]韩国
-custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]🏳️‍🌈 国家选择`[]🌎 北美地区`[]🌏 东亚地区`[]🌍 其它地区`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🏳️‍🌈 国家选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🏳️‍🌈 国家选择`[]DIRECT
+custom_proxy_group=🏳️‍🌈 地区选择`select`[]美国`[]香港`[]狮城`[]日本`[]台湾`[]韩国
+custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]🏳️‍🌈 地区选择`[]🌎 北美地区`[]🌏 东亚地区`[]🌍 其它地区`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]🏳️‍🌈 地区选择`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 节点选择`[]🏳️‍🌈 地区选择`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🌎 北美地区`[]🌏 东亚地区`[]🌍 其它地区`[]DIRECT
-custom_proxy_group=🧱 国内网站`select`[]🚀 节点选择`[]🏳️‍🌈 国家选择`[]DIRECT
+custom_proxy_group=🧱 国内网站`select`[]🚀 节点选择`[]🏳️‍🌈 地区选择`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.google.com/generate_204`300,,50
 custom_proxy_group=⚡ 故障转移`fallback`.*`https://www.google.com/generate_204`300,,50
 custom_proxy_group=🌎 北美地区`url-test`(美|US|United States|加拿大|CA|Canada|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥)`https://www.google.com/generate_204`300,,100
